@@ -1,7 +1,8 @@
-plugins {
-    alias(libs.plugins.android.application)
-    alias(libs.plugins.google.gms.google.services)
+import org.gradle.internal.classpath.Instrumented.systemProperty
 
+plugins {
+    id("com.android.application")
+    id("com.google.gms.google-services")
 }
 
 android {
@@ -28,8 +29,23 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
+    }
+    testOptions {
+        unitTests{
+            isIncludeAndroidResources = true
+            isReturnDefaultValues = true
+
+        }
+        unitTests.all {
+            it.useJUnit {
+                systemProperty("mockito.mock-maker-class", "mock-maker-inline")
+                systemProperty("jdk.instrument.traceUsage", "false")
+                systemProperty("java.util.logging.config.file", "logging.properties")
+            }
+            it.jvmArgs("-XX:+EnableDynamicAgentLoading")
+        }
     }
 }
 
@@ -39,12 +55,21 @@ dependencies {
     implementation(libs.material)
     implementation(libs.activity)
     implementation(libs.constraintlayout)
+    implementation (platform(libs.firebase.bom) )
+    implementation(libs.firebase.auth)
     implementation(libs.com.google.firebase.firebase.auth2)
     implementation(libs.firebase.analytics)
     testImplementation(libs.junit)
+    testImplementation(libs.mockito.core)
+    testImplementation(libs.mockito.android)
+    testImplementation(libs.robolectric)
+    testImplementation(libs.byte.buddy)
+    testImplementation(libs.byte.buddy.agent)
+    testImplementation (libs.com.google.firebase.firebase.auth2)
+    androidTestImplementation(libs.test.runner)
+    androidTestImplementation(libs.test.rules)
     androidTestImplementation(libs.ext.junit)
     androidTestImplementation(libs.espresso.core)
-    implementation(platform(libs.firebase.bom.v3351))
     implementation(libs.google.firebase.auth.ktx)
 
 }
